--- a/tibasport_stock_new/Properties/Settings.settings
+++ b/tibasport_stock_new/Properties/Settings.settings
@@ -1,7 +1,14 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="tibasport_stock_new.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="tibasport_dbConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=as\sql2017;Initial Catalog="F:\CODE PROJECT\C#\TIBASPORT_STOCK_NEW\TIBASPORT_STOCK_NEW\TIBASPORT_DB.MDF";Integrated Security=True&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=as\sql2017;Initial Catalog="F:\CODE PROJECT\C#\TIBASPORT_STOCK_NEW\TIBASPORT_STOCK_NEW\TIBASPORT_DB.MDF";Integrated Security=True</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
